skill section completed

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <p>72%</p>
           </div>
           <div class="bar">
-            <span>html</span>
+            <span class="html"></span>
           </div>
         </div>
         <div class="skill-bar">
@@ -205,7 +205,7 @@
             <p>80%</p>
           </div>
           <div class="bar">
-            <span>css</span>
+            <span class="css"></span>
           </div>
         </div><div class="skill-bar">
           <div class="info">
@@ -213,7 +213,7 @@
             <p>70%</p>
           </div>
           <div class="bar">
-            <span>javascript</span>
+            <span class="javascript"></span>
           </div>
         </div><div class="skill-bar">
           <div class="info">
@@ -221,7 +221,7 @@
             <p>50%</p>
           </div>
           <div class="bar">
-            <span>Figma</span>
+            <span class="Figma"></span>
           </div>
         </div>
       </div>
@@ -229,6 +229,40 @@
     
       <div class="skill-right">
         <h3> Professional Skills</h3>
+        <div class="professional">
+          <div class="box">
+            <!-- <div class="circle">
+              <div class="points" style="--i:1;"></div>
+              <div class="points" style="--i:2;"></div>
+              <div class="points" style="--i:3;"></div>
+            </div> -->
+            <div class="circle" data-dots="80" data-percent="90"></div>
+            <div class="text">
+              <big>90%</big>
+              <small>Team Work</small>
+            </div>
+          </div>
+          <div class="box">
+          <div class="circle" data-dots="80" data-percent="80"></div>
+            <div class="text">
+              <big>80%</big>
+              <small>Creativity</small>
+            </div>
+          </div>
+          <div class="box">
+          <div class="circle" data-dots="80" data-percent="55"></div>
+            <div class="text">
+              <big>55%</big>
+              <small>Project Management</small>
+            </div>
+          </div> <div class="box">
+          <div class="circle" data-dots="80" data-percent="70"></div>
+            <div class="text">
+              <big>70%</big>
+              <small>Communication</small>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
